feat: don't center timeline on mobile